<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easyoffer.android.easyofferapp.fragments.MainActivityFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/offerlistrv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>


    <!-- TODO: Update blank fragment layout -->


</FrameLayout>

