...
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/detailThumbnailDesc"
        android:scaleType="centerInside" />

    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/detailthumbnailURL"
        android:layout_toRightOf="@+id/detailthumbnailURL"
...
