...
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@null"-->

            <!--android:src="@drawable/favorite_added" />-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/offer_child_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp" />


        </LinearLayout>
...
